--- a/templates/modules/homepage/homepage.html
+++ b/templates/modules/homepage/homepage.html
@@ -6,14 +6,19 @@ Associated Files: homepage.html, homepage.js and homepage.css
 -->
 
 <template name = "homepage">
+  <div class="hidden-comparison-div" style="color:#ffffff;"></div>
+  <div class="home-image">
+    <img src="homeImage.jpg">
+  </div>
   <div class="home">
+
     <!-- tags category -->
     <div class="home-tags">
       {{#each categories}}
-        <div class="home-tag" id = "{{short}}" style = "background-color: {{color}}"><div class="{{short}}-dot dot"><i class="fa fa-times" id="{{short}}-dot"></i></div>{{name}} &nbsp;&nbsp;{{number}}</div>
+        <div class="{{short}}-case case" style = "border-color: #ffffff; color: #ffffff; background-color:{{color}};"><i class="fa fa-suitcase"></i></div><div class="home-tag {{short}}-tag" id = "{{short}}" style = "border-color: {{color}}; color: {{color}};"><div class="{{short}}tagText" style="float:left;">{{name}}</div>&nbsp;&nbsp;{{number}}</div>
       {{/each}}
       {{#if loggedIn}}
-        <div class="home-tag" id = "User" style = "background-color: #000000"><div class="User-dot dot"><i class="fa fa-times User-dot" id="User-dot"></i></div>Your listings &nbsp;&nbsp;{{userNumber}}</div>
+        <div class="User-case case" style = "border-color: #ffffff; color: #ffffff; background-color:#000000;"><i class="fa fa-suitcase"></i></div><div class="home-tag" id = "User" style = "border-color: #000000; color: #000000;">Your listings &nbsp;&nbsp;{{userNumber}}</div>
       {{/if}}
     </div>
 
